on scroll working, fixed overflow mobile issue, need to add responsiveness to stories, need to style dashboard

--- a/client_styles/main.css
+++ b/client_styles/main.css
@@ -4,7 +4,7 @@
 html, body {
   	width: 100%; 
   	height: 100%; 
-  	overflow: scroll;
+  	/*overflow: scroll;*/
   	background-color: #F5F5F5;
 }
 #rekog-block{
@@ -275,19 +275,22 @@ img{
 	color: white;
 	z-index: 10000;
 	border-bottom: solid 0.5px white;
+	transition: background-color 1.0s;
 }
 #logo-div{
 	float: left;
 	background-color: #0099e5;
 	border-radius: 5px;
 	margin: 10px 0px 15px 25px;
-	padding: 4px;
+	padding: 6px;
+	transition: background-color 1.0s;
 }
 #logo{
 	margin: auto;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 28px;
 	font-weight: 100;
+	transition: font-size 1.0s;
 }
 #nav-div{
 	width: 100%;
@@ -300,6 +303,7 @@ li a{
 	transition: color 0.7s ease;
 	font-size: 20px;
 	color: white;
+	transition: font-size 1.0s;
 }
 #nav-div li{
 	display: inline;
@@ -319,11 +323,12 @@ li a:hover{
 .mobile-menu-trigger a{
 	float: right;
 	margin-right: 18px;
-	padding: 20px 25px 15px 0px;
+	padding: 15px 25px 15px 0px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 25px;
+	font-size: 26px;
 	text-decoration: none;
+	transition: font-size 1.0s;
 }
 /*mobile menu*/
 @media only screen and (min-width: 1009px) {
@@ -337,7 +342,6 @@ li a:hover{
 @media (max-width: 880px){
 	#logo{
 		font-size: 25px;
-		margin-left: 20px;
 	}
 	#header-container{
 		height: 52px;
@@ -350,13 +354,12 @@ li a:hover{
 @media (max-width: 740px){
 	#logo{
 		font-size: 23px;
+	}
+	#logo-div{
 		margin-left: 10px;
 	}
 	#header-container{
 		height: 45px;
-	}
-	.mobile-menu-trigger a{
-		padding-top: 10px;
 	}
 }
 #vid-container{
@@ -444,6 +447,27 @@ p .bottom-stories{
 	width: 100% !important;
 	height: auto !important;
 }
+#story-content-3{
+	position: relative;
+	top: -300px;
+	width: 100%;
+	height: 500px;
+	background-color: #0099e5;
+	color: white;
+	text-align: center;
+}
+#lower-story-block{
+	position: relative;
+	border-radius: 25px;
+	font-family: 'Montserrat', sans-serif;
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+	color: #787878;
+	top: 100px;
+	margin: auto;
+	width: 70%;
+	height: 300px;
+	background-color: white;
+}
 #bottom-content{
 	position: relative;
 	margin: 0px auto 0px auto;
@@ -458,7 +482,7 @@ p .bottom-stories{
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 	z-index: 5000;
 	height: 180px;
-	width: 855px;
+	width: 70%;
 	text-align: center;
 	border-radius: 25px;
 }
